# Hedux

./: Hedux.cabal  LICENSE  README.md
app/: Main.hs
src/: hedux.hs
