name:                Hedux
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sidmishraw/Hedux#readme
license:             BSD3
license-file:        LICENSE
author:              Sidharth Mishra
maintainer:          sidmishraw@gmail.com
copyright:           2017 Sidharth Mishra
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hedux
  build-depends:       base >= 4.7 && < 5
                      , containers

  default-language:    Haskell2010

executable Hedux-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hedux
                     , containers
  default-language:    Haskell2010

test-suite Hedux-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Hedux
                     , containers

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sidmishraw/Hedux
